fix date and time display on iOS

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -187,7 +187,7 @@ body{
     grid-template-rows: auto;
     grid-gap: .5rem;
     padding-bottom: 4rem;
-    margin-top: 75px;
+    margin-top: 120px;
   }
   &__cell{
     display: flex !important;
@@ -216,7 +216,7 @@ body{
 }
 
 .comingsoon{
-  margin-top: 75px;
+  margin-top: 120px;
   &__header{
     text-align: center;
     font-size: 1.125rem;
@@ -243,9 +243,15 @@ body{
     padding: 0.5rem 0;
     text-align: center;
     text-overflow: ellipsis; 
-    line-clamp: 2;
+    height: 30px;
     font-size: 0.875rem;
     color:#383D48;
+  }
+  &__date{
+    font-size: 0.75rem;
+    color:#878E9D;
+    text-align: center;
+    padding-top: 5px;
   }
 }
 
@@ -602,14 +608,24 @@ body{
         &--selected{
           border-bottom: 3px solid #ff8200;
           color:#ff8200;
+          font-weight: bold;
+          font-size: 1.2rem;
         }
       } 
     }
     &__header{
-      text-align: center;
+      color: #383d48;
       font-size: 1rem;
-      font-weight: bold;
-      color: #383D48;
+      font-weight: 700;
+      position: fixed;
+      text-align: center;
+      top: 0;
+      left: 0;
+      background-color: #fff;
+      width: 100%;
+      z-index: 2;
+      margin: 0;
+      padding: 1rem 0;
     }
 }
 
